Commit #2 for Challenge

--- a/index.html
+++ b/index.html
@@ -15,42 +15,171 @@
 <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary customNav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Bootstrap Portfolio</a>
+      <a class="navbar-brand"></a>Bootstrap Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="#myportfolio">My Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="#aboutme">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Me</a>
+            <a class="nav-link" href="#contactme">Contact Me</a>
         </ul>
       </div>
     </div>
+  </nav>
   </nav>
 <!-- End navigation bar -->
 
 <!-- Jumbotron -->
 <div class="p-5 mb-4 bg-body-tertiary rounded-3 myImage">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h1 class="display-5 fw-bold">Anthony Greenwood</h1>
-          <p class="fs-4">Below you can access a few projects I have been involved with as part of my 16 week Bootcamp in Front End Web Development. These projects have been completed by me either working with starter code or creating from scratch.</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h1 class="display-5 fw-bold">Anthony Greenwood</h1>
+        <p class="fs-4">To contact me please see my details at the bottom of this page.
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End jumbotron -->
+
+<!-- Cards -->
+<div class="container-fluid content">
+  <h2 class="sectionHeading">My Portfolio</h2>
+      <div class="row myPortfolio">
+
+<!-- Card 1 -->
+        <div class="row row-cols-1 row-cols-md-3 g-5">
+          <div class="col">
+            <div class="card h-100">
+              <a href="https://apgreenwood1971.github.io/prework-study-guide/" class="stretched-link"></a>
+              <img src="./images/Prework Study Guide.png" class="card-img-top" alt="Prework Study Guide">
+        <div class="card-body">
+          <h5 class="card-title">Prework - Study Guide</h5>
+          <p class="card-text">Before starting the 16 week Front End Web Development Bootcamp, I completed this prework.
+            <p>This acted as an introduction to Front End Development and covered the following areas:
+            <p>* HTML.</p>
+            <p>* CSS.</p>
+            <p>* Git.</p>
+            <p>* JavaScript.</p>
+          </p> 
         </div>
-        <div class="col-md-6">
+        </a>
+      </div>
+    </div>
+<!-- End card 1 -->
+
+<!-- Card 2 --> 
+    <div class="col">
+            <div class="card h-100">
+              <a href="https://apgreenwood1971.github.io/module1-challenge-horiseon/" class="stretched-link"></a>
+        <img src="./images/digital-marketing-meeting.jpg" class="card-img-top" alt="Horiseon Challenge">
+        <div class="card-body">
+          <h5 class="card-title">Challenge - Horiseon</h5>
+          <p class="card-text">This challenge involved working on a codebase to ensure it followed current accessibility standards whilst being optimized for search engines.
+            <p>The acceptance criteria for this were as follows:</p>
+            <p>* Semantic HTML elements to be added throughout the source code.</p>
+            <p>* HTML elements to follow a logical structure independent of styling and positioning.</p>
+            <p>* CSS code to follow the same logical structure as the HTML with clear labelling for any future updates that need to be made.</p>
+            <p>* Title elements contain a concise, descriptive title.</p>
+          </div>
+        </a>
+        </div>
+      </div>  
+<!-- End card 2 -->    
+    
+<!-- Card 3 -->
+<div class="col">
+  <div class="card h-100">
+<a href="https://apgreenwood1971.github.io/Travel-California/" class="stretched-link"></a>
+        <img src="./images/bg-img.png" class="card-img-top" alt="mountains">
+        <div class="card-body">
+          <h5 class="card-title">Exercise - Travel California</h5>
+          <p class="card-text">This exercise was to use what had been learnt about Bootstrap to add to a starter code to produce a webpage.
+          </div>
+        </a>
+        </div>
+      </div>
+<!-- End card 3 -->
+  
+<!-- Card 4 -->
+   <div class="col">
+    <div class="card h-100">
+  <a href="https://placehold.co/600x400" class="stretched-link"></a>
+          <img src="https://placehold.co/600x400" class="card-img-top" alt="placeholder">
+          <div class="card-body">
+            <h5 class="card-title">Coming Soon</h5>
+            <p class="card-text">A placeholder waiting for the next challenge to be completed.
+            </div>
+          </a>
+          </div>
+        </div>
+  <!-- End card 4 -->
+
+  <!-- Card 5 -->
+  <div class="col">
+    <div class="card h-100">
+  <a href="https://placehold.co/600x400" class="stretched-link"></a>
+          <img src="https://placehold.co/600x400" class="card-img-top" alt="placeholder">
+          <div class="card-body">
+            <h5 class="card-title">Coming Soon</h5>
+            <p class="card-text">A placeholder waiting for the next challenge to be completed.
+            </div>
+          </a>
+          </div>
+        </div>
+  <!-- End card 5 -->
+</div>
+</div>
+<!-- End cards -->
+</body>
+<footer>
+  <div class="row row-cols-1 row-cols-md-3 g-3">
+    <div class="col">
+      <div class="card h-100">
+        <img src="./images/Skills Clipart.jpg" class="card-img-top" alt="Skills from Course">
+        <div class="card-body">
+          <h5 class="card-title">Skills</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="./images/About-Me-Title.jpg" class="card-img-top" alt="About Anthony Greenwood">
+        <div class="card-body">
+          <h5 class="card-title">About Me</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="./images/regcon-solutions-information-email-telephone-service-contact-clipart.jpg" class="card-img-top" alt="How to Contact Me">
+        <div class="card-body">
+          <h5 class="card-title">Contact Me</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
         </div>
       </div>
     </div>
   </div>
-<!-- End jumbotron -->
-</body>
+</footer>
 </html>
