Commit #3 for Challenge

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#myportfolio">My Portfolio</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills">Skills</a>
@@ -52,13 +52,13 @@
 </div>
 <!-- End jumbotron -->
 
-<!-- Cards -->
+<!-- Portfolio Cards -->
 <div class="container-fluid content">
   <h2 class="sectionHeading">My Portfolio</h2>
       <div class="row myPortfolio">
 
 <!-- Card 1 -->
-        <div class="row row-cols-1 row-cols-md-3 g-5">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
           <div class="col">
             <div class="card h-100">
               <a href="https://apgreenwood1971.github.io/prework-study-guide/" class="stretched-link"></a>
@@ -124,49 +124,42 @@
           </div>
         </div>
   <!-- End card 4 -->
+</div>
+</div>
+<!-- End Portfolio cards -->
 
-  <!-- Card 5 -->
-  <div class="col">
-    <div class="card h-100">
-  <a href="https://placehold.co/600x400" class="stretched-link"></a>
-          <img src="https://placehold.co/600x400" class="card-img-top" alt="placeholder">
-          <div class="card-body">
-            <h5 class="card-title">Coming Soon</h5>
-            <p class="card-text">A placeholder waiting for the next challenge to be completed.
-            </div>
-          </a>
-          </div>
+<!-- Skill Card -->
+<div class="container-fluid content">
+  <h2 class="sectionHeading">Skills</h2>
+      <div class="row skills">
+
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+          <div class="col">
+              <div class="card h-100">
+      <img src="./images/Skills Clipart.jpg" class="card-img-top" alt="Skills from Course">
+         <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
-  <!-- End card 5 -->
+    </div>
+  </div>
 </div>
-</div>
-<!-- End cards -->
+
 </body>
 <footer>
-  <div class="row row-cols-1 row-cols-md-3 g-3">
-    <div class="col">
-      <div class="card h-100">
-        <img src="./images/Skills Clipart.jpg" class="card-img-top" alt="Skills from Course">
-        <div class="card-body">
-          <h5 class="card-title">Skills</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="./images/About-Me-Title.jpg" class="card-img-top" alt="About Anthony Greenwood">
-        <div class="card-body">
+  <div class="container-fluid content">
+    <h2 class="sectionHeading">About Me</h2>
+        <div class="row aboutMe">
+  
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+      <div class="col">
+          <div class="card h-100">
+            <img src="./images/About-Me-Title.jpg" class="card-img-top" alt="About Anthony Greenwood">
+          <div class="card-body">
           <h5 class="card-title">About Me</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
         </div>
-      </div>
     </div>
     <div class="col">
       <div class="card h-100">
@@ -174,10 +167,6 @@
         <div class="card-body">
           <h5 class="card-title">Contact Me</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
       </div>
     </div>
   </div>
